--- a/src/style.scss
+++ b/src/style.scss
@@ -1,53 +1,62 @@
+$formbackground: #01949A;
+$formcolor: #004369;
+$SubmitButton: #BA9973;
+$HoverSubmit: #A9582B;
 .formcontainer{    
-    
     height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: center;
-    background-image: url("./icons/background.gif");
-    background-repeat: repeat;
-    background-size: auto;
-    
-    background-color: #cccccc;
-    
+    justify-content: center;    
+  
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: $formbackground;
     .formwrap{
-        background: transparent;
-        backdrop-filter: blur(5px);
+        background-color: $formcolor;
         background-size: contain;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         border-radius: 15px;
         padding: 90px 110px;
         display: flex;
-        gap: 20px;
-        
-        border: 1px solid black;
+        gap: 20px;     
         
         form{
             
             display: flex;
             flex-direction: column;
             gap: 20px;
-            .tittle{
+            .logo{
                 display: flex;
-                
-                font-weight: bold;
-                font-size: 26px;
+                gap: 10px;
+                align-self: center;
                 justify-content: center;
-                align-items: center;
+                img{
+                    width:32px;
+                    height: 32px;
+                }
+                .tittle{
+                    display: flex;
+                    font-weight: bold;
+                    font-size: 26px;
+                    color: #E9EAEC;
+                    justify-content: center;
+                    align-items: center;
+                }
             }
             input{
                     padding: 10px;
-                    color: rgb(0, 0, 0);
+                    color: #E9EAEC;
                     width: auto;
-                    outline: rgb(25, 25, 25);
-                    border: 1px solid black;
-                    border-radius: 5px;
+                    outline: none;
+                    border: none;
+                    border-bottom: 1px solid #E5DDC8;
+                    
                     background-color: transparent;     
             }
             button{
-                background-color: rgb(96, 96, 96);
+                background-color: $SubmitButton;
                 border-radius: 5px;
-                color: whitesmoke;
+                color: black;
                 border: none;
                 align-self: center;
                 padding: 10px;
@@ -55,15 +64,21 @@
                 transition-duration: 0.5s;
                 &:hover{
                     width:115px;
+                    color: white;
+                    font-weight: bold;
                     border-radius: 2px;
-                    background-color: #000000ee;
+                    background-color: $HoverSubmit;
                     transition-duration: 0.3s;
                 }
+            }
+            p{
+                color:#E9EAEC;
             }
             label{
                 display: flex;
                 align-items: center;
                 gap: 10px;
+                color:#E9EAEC;
                 cursor: pointer;
                 
                 img{
@@ -77,6 +92,7 @@
                 }
                 span{
                     transition-duration: 0.35s;
+                    color: #E9EAEC;
                     &:hover{
                         font-size: large;
                         font-weight: 400;
@@ -88,8 +104,8 @@
     }
 }
 .home{
-    background-color: #77A3AE;
-    background-image:url("./icons/background.gif"); ;
+    background-color: #48BCD1;
+   
     display: flex;
     height: 100vh;
     align-items: center;
@@ -103,13 +119,13 @@
         overflow: hidden;
         
         .sidebar{ flex: 1;
-            background-color: #0f0f0f;  
+            background-color: #003655;  
             
             .Navbar{
                 padding: 10px;
                 justify-content: space-between;    
                 align-items: center;
-                background-color: #000000;
+                background-color: #012c45;
                 display: flex;
                 height: 50px;
             
@@ -124,7 +140,8 @@
                     border: none;
                     transition-duration: 0.5s ;
                     padding: 10px;
-                    background-color: #7a7a7a;
+                    color: #E5DDC8;
+                    background-color: #01949A;
                     height: 35px;
                     cursor: pointer;
                     font-weight:100;
@@ -133,13 +150,13 @@
                     &:hover{
                     transition-duration: 0.5s;
                     width: larger;
-                    background-color: #cc2a2a;
+                    background-color: #DB1F48;
                     color: #ffffff;
                     }
                 }
                 img{
                     background-color: white;
-                    border: 1px solid whites;
+                    border: 1px solid white;
                     height: 40px;
                     width: 40px;
                     border-radius: 50%;
@@ -191,12 +208,13 @@
                 &:hover{
                     
                     transition-duration: 0.6s;
-                    background-color: #1e4148e7;
+                    background-color: #01949A;
                     
                 }
                 img{
                     height: 50px;
                     width: 50px;
+                    border: 1px solid white;
                     border-radius: 50%;
                     object-fit: cover;
                 }
@@ -205,9 +223,9 @@
         }
         .chat{  
             flex: 2;
-            background-color: white;
+            background-color: #cec6b1;
             .topbar{
-                background-color: #080808;
+                background-color: #004369;
                 
                 height: 50px;
                 padding: 10px;
@@ -219,7 +237,7 @@
                     height: 50px;
                     background-color: transparent;
                     width: 50px;
-                    border: none;
+                    border: 1px solid white;
                     outline: none;
                     border-radius: 50%;
                     object-fit: contain ;
@@ -228,7 +246,7 @@
             
             .input{
                 display: flex;
-                background-color: #b4b4b4;
+                background-color: #C0DCEC;
                 height:50px;
                 padding: 10px;
                 align-items: center;
@@ -237,11 +255,9 @@
                 .typeinput{
                     width: 90%;
                     background-color: #9e9e9e;
-                    .icon{
-                        width: 100px;
-                    }
+                   
                     input{
-                        background-color: #b4b4b4;
+                        background-color: #C0DCEC;
                         padding: 2px;
                         display: flex;
                         align-items: center;
@@ -266,12 +282,19 @@
                     gap: 10px;
                     align-items: center;
                     img{
+                        cursor: pointer;
                         height: 25px;
                         width: 25;
+                        transition-duration: 0.5s;
+                        &:hover{
+                            width:28px;
+                            height: 28px;
+                            transition-duration: 0.5s;
+                        }
                     }
                     button{
                         height:80%;
-                        background-color: #343434;
+                        background-color: transparent;
                         border: none;
                         color: white;
                         border-radius: 2px;
@@ -279,7 +302,7 @@
                         padding: 10px;
                         transition-duration:0.5s ;
                         &:hover{
-                            
+                            background-color: #15998E;
                             width: 65px;
                             transition-duration: 0.5s;
                         }
@@ -289,7 +312,7 @@
             }
           
             .Messages{
-                 background-color: #dcdcdc;
+                 background-color: #E5DDC8;
                  overflow: scroll;
                  padding: 10px;
                  height: calc(100% - 160px);
@@ -305,10 +328,11 @@
                             font-weight: 450;
                             font-size: 1.5vh;
                         }
-                        img{
+                        .userphoto{
                             height:50px;
                             width: 50px;
                             object-fit: cover;
+                            border: 1px solid #004369;
                             border-radius: 50%;
                         }
                     }
@@ -317,11 +341,11 @@
                         flex-direction: column;
                         p{
                             height: 80%;
-                            color: white;
+                            color: #E5DDC8;
                             width: max-content;
                             padding: 10px 20px;
                             border-radius: 0px 10px 10px 10px;
-                            background-color: #272727;
+                            background-color: #DB1F48;
                         }
                         img{
                             width:40%
@@ -329,12 +353,13 @@
                     }
                     &.owner{
                         flex-direction: row-reverse;
+                        
                         .messageContent{
                             align-items: flex-end;
                             p{
                                 border-radius: 10px 0px 10px 10px;
-                                color: black;
-                                background-color: #9b9b9b;
+                                color: #E5DDC8;
+                                background-color: #01949A;
                             }
                         }
                     }
